syntax = 'proto3';

package astria.signer.v1;

message ExecuteRoundOneRequest {}
